2008-09-16	Joel Sherrill <joel.sherrill@oarcorp.com>

	* irq/FPGA.c: Remove unnecessary includes of rtems/libcsupport.h and
	rtems/libio.h.

2008-09-15	Joel Sherrill <joel.sherrill@oarcorp.com>

	* Makefile.am, configure.ac, include/bsp.h, startup/bspstart.c: Add use
	of bsp_get_work_area() in its own file and rely on BSP Framework to
	perform more initialization.
	* startup/bspgetworkarea.c: New file.

2008-09-10	Joel Sherrill <joel.sherrill@oarcorp.com>

	* include/bsp.h: Review of all bsp_cleanup() implementations. In this
	phase, all prototypes were removed from bsp.h and empty
	implementations were removed and made to use the shared stub.

2008-09-06	Ralf Corsépius <ralf.corsepius@rtems.org>

	* irq/irq.c: Convert to "bool".

2008-09-05	Ralf Corsépius <ralf.corsepius@rtems.org>

	* console/85c30.c, console/console.c, irq/FPGA.c, timer/timer.c,
	tod/tod.c: Convert to "bool".

2008-09-03	Joel Sherrill <joel.sherrill@OARcorp.com>

	* Makefile.am, README, configure.ac, console/85c30.c,
	console/console.c, console/consolebsp.h, include/bsp.h,
	include/gen2.h, irq/FPGA.c, irq/irq.c, irq/irq.h, irq/irq_init.c,
	start/start.S, startup/bspstart.c, startup/genpvec.c,
	startup/linkcmds, timer/timer.c, tod/tod.c: Initiate update and
	testing. Runs hello but does not run ticker yet.

2008-08-31	Joel Sherrill <joel.sherrill@oarcorp.com>

	* timer/timer.c: Eliminate empty function from every benchmark timer
	driver. Fix spelling.

2008-08-31	Joel Sherrill <joel.sherrill@oarcorp.com>

	* timer/timer.c: Rename timer driver methods to follow RTEMS
	programming conventions.

2008-08-20	Ralf Corsépius <ralf.corsepius@rtems.org>

	* irq/FPGA.c, irq/irq_init.c, pci/no_host_bridge.c,
	startup/Hwr_init.c, startup/genpvec.c:
	Add missing prototypes.

2008-07-03	Chris Johns <chrisj@rtems.org>

	* c/src/lib/libbsp/powerpc/score603e/startup/genpvec.c: Change to
	the Chains API.

2008-05-15	Joel Sherrill <joel.sherrill@OARcorp.com>
